# ai-agent

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  QWEN.md  README.md  SHELLs-note.txt  agent_server.py  agent_server_old.py  auth.py  chat-create_ai-agent__begin.md  config.yaml  dispatcher.py  docker-compose.yaml  history_dump.json  launcher.py  nginx.conf  prompt-architect.md  prompt-nemotron-mcp.md  prompt-nemotron-platform-io.md  qwen-session.sh  requirements.txt  run.sh  session_db.py  shared_storage.py
docs/: provider-evolution.md
src/: agent.rs  chat_log.rs  context.rs  hooks.rs  lib.rs  main.rs  orchestrator.rs  provider.rs  types.rs
src/config/: mod.rs
src/memory/: vector_db.rs
src/safety/: mod.rs
src/tool_routing/: frontend.rs  mcp_transport.rs  mod.rs  platform.rs
static/: index.html
testagent/: auth.py
web/: dispatcher.html  index.html  quad.html
